@@ -3,12 +3,12 @@ package com.ssafy.sulmap.api.controller;
 import com.ssafy.sulmap.api.dto.request.CreatePlanRequest;
 import com.ssafy.sulmap.api.dto.request.PlanSpotRequest;
 import com.ssafy.sulmap.api.dto.request.UpdatePlanRequest;
+import com.ssafy.sulmap.api.dto.response.PlanListResponse;
 import com.ssafy.sulmap.api.dto.response.PlanResponse;
 import com.ssafy.sulmap.api.security.model.UserDetail;
 import com.ssafy.sulmap.core.model.DrinkingPlanSpotModel;
 import com.ssafy.sulmap.core.model.command.CreatePlanCommand;
 import com.ssafy.sulmap.core.model.command.UpdatePlanCommand;
-import com.ssafy.sulmap.core.model.enums.PlanTheme;
 import com.ssafy.sulmap.core.service.PlanService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
@@ -17,10 +17,11 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.List;
 import java.util.stream.Collectors;
 
 @RestController
-@RequestMapping("/api/plans")
+@RequestMapping("/plans")
 @RequiredArgsConstructor
 public class PlanController {
     private final PlanService _planService;
@@ -38,11 +39,13 @@ public class PlanController {
                 .ownerUserId(userId)
                 .title(request.title())
                 .description(request.description())
-                .theme(PlanTheme.fromString(request.theme()))
+                .theme(request.theme())
                 .totalBudget(request.totalBudget())
-                .spots(request.spots() != null ? request.spots().stream()
-                        .map(this::toSpotModel)
-                        .collect(Collectors.toList()) : null)
+                .spots(request.spots() == null
+                        ? List.of()
+                        : request.spots().stream()
+                                .map(this::toSpotModel)
+                                .toList())
                 .build();
 
         var result = _planService.createPlan(command);
@@ -52,6 +55,25 @@ public class PlanController {
         }
 
         return ResponseEntity.ok(PlanResponse.fromModel(result.getOrThrow()));
+    }
+
+    /**
+     * 플랜 목록 조회 (사용자별)
+     */
+    @GetMapping
+    public ResponseEntity<?> listPlans(@AuthenticationPrincipal UserDetail userDetail) {
+        var userId = userDetail.userModel().getId();
+
+        var result = _planService.listPlans(userId);
+        if (result.isFailure()) {
+            return new ResponseEntity<>(result.getSingleErrorOrThrow().getStatus());
+        }
+
+        var plans = result.getOrThrow().stream()
+                .map(PlanListResponse::fromModel)
+                .collect(Collectors.toList());
+
+        return ResponseEntity.ok(plans);
     }
 
     /**
@@ -69,11 +91,13 @@ public class PlanController {
                 .userId(userId)
                 .title(request.title())
                 .description(request.description())
-                .theme(request.theme() != null ? PlanTheme.fromString(request.theme()) : null)
+                .theme(request.theme())
                 .totalBudget(request.totalBudget())
-                .spots(request.spots() != null ? request.spots().stream()
-                        .map(this::toSpotModel)
-                        .collect(Collectors.toList()) : null)
+                .spots(request.spots() == null
+                        ? null
+                        : request.spots().stream()
+                                .map(this::toSpotModel)
+                                .toList())
                 .build();
 
         var result = _planService.updatePlan(command);
@@ -108,8 +132,7 @@ public class PlanController {
 
         var result = _planService.deletePlan(planId, userId);
         if (result.isFailure()) {
-            var status = result.getSingleErrorOrThrow().getStatus();
-            return ResponseEntity.status(status).build();
+            return new ResponseEntity<>(result.getSingleErrorOrThrow().getStatus());
         }
 
         return ResponseEntity.ok().build();
